--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -1,15 +1,11 @@
 ---
-- hosts: all
-  become: yes
+- hosts: localhost
+  become: true
   tasks:
 
       - name: Update all packages to the latest version
         apt:
            upgrade: dist
-
-      - name: Run the equivalent of "apt-get update" as a separate step
-        apt:
-          update_cache: yes
 
       - name: Upgrade all packages to the last version
         apt: 
