--- a/mysql/tasks/users.yml
+++ b/mysql/tasks/users.yml
@@ -8,5 +8,5 @@
     state: "{{ item.state | default('present') }}"
     append_privs: "{{ item.append_privs | default('no') }}"
     encrypted: "{{ item.encrypted | default('no') }}"
-  with_items: "{{ mysql_users }}"
-  no_log: true
+    # with_items: "{{ mysql_users }}"
+    #no_log: true
