--- a/playbooks/roles/webservers/tasks/main.yml
+++ b/playbooks/roles/webservers/tasks/main.yml
@@ -2,7 +2,7 @@
 ---
 
 
-   - name: install webserver {{ apache_package }} on debian servers
+   - name: install webserver servers
      package:
       name: "{{ apache_package }}"
       state: present
