--- a/mysql/tasks/secure-installation.yml
+++ b/mysql/tasks/secure-installation.yml
@@ -6,7 +6,7 @@
     password: "{{ mysql_user_password }}"
     priv: '*.*:ALL,GRANT'
     state: present
-  when: mysql_user_name != mysql_root_username
+    # when: mysql_user_name != mysql_root_username
 
 # Has to be after the password assignment, for idempotency.
 - name: Copy user-my.cnf file with password credentials.
@@ -15,9 +15,9 @@
     dest: "{{ mysql_user_home }}/.my.cnf"
     owner: "{{ mysql_user_name }}"
     mode: 0600
-  when: >
-    mysql_user_name != mysql_root_username
-    and (mysql_install_packages | bool or mysql_user_password_update)
+    # when: >
+    #mysql_user_name != mysql_root_username
+    #and (mysql_install_packages | bool or mysql_user_password_update)
 
 - name: Disallow root login remotely
   command: 'mysql -NBe "{{ item }}"'
@@ -34,7 +34,7 @@
   register: mysql_root_hosts
   changed_when: false
   check_mode: false
-  when: mysql_install_packages | bool or mysql_root_password_update
+  # when: mysql_install_packages | bool or mysql_root_password_update
 
 # Note: We do not use mysql_user for this operation, as it doesn't always update
 # the root password correctly. See: https://goo.gl/MSOejW
@@ -67,7 +67,7 @@
     owner: root
     group: root
     mode: 0600
-  when: mysql_install_packages | bool or mysql_root_password_update
+    #when: mysql_install_packages | bool or mysql_root_password_update
 
 - name: Get list of hosts for the anonymous user.
   command: mysql -NBe 'SELECT Host FROM mysql.user WHERE User = ""'
