--- a/mysql/tasks/setup-Debian.yml
+++ b/mysql/tasks/setup-Debian.yml
@@ -5,7 +5,7 @@
 
 - name: Update apt cache if MySQL is not yet installed.
   apt: update_cache=yes
-  when: not mysql_installed.stat.exists
+  # when: not mysql_installed.stat.exists
 
 - name: Ensure MySQL Python libraries are installed.
   apt:
